manifests/01-ingress-gateway/collabora-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-ingress
  namespace: nextcloud-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`office.unity-workspace.com`) || Host(`collabora.sengporkeat.com`) || Host(`office.sengporkeat.com`)
      services:
        - name: collabora
          port: 9980
  tls: {}
